include departmentId in login response
