# server/openapi.json
@@ -3034,6 +3034,18 @@
               "admin"
             ]
           },
+          "departmentId": {
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "uuid",
+                "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
           "mustChangePassword": {
             "type": "boolean"
           }
@@ -3043,6 +3055,7 @@
           "email",
           "displayName",
           "role",
+          "departmentId",
           "mustChangePassword"
         ],
         "additionalProperties": false
